# manatools

./: .editorconfig  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerFlags.cmake  FindPkgConfigModule.cmake  ProjectFuncs.cmake
docs/: file-types.txt  fob.hexpat  fpb.hexpat  mlt.hexpat  mlt.txt  mpb-ver2-panpot.txt  mpb.hexpat  msb+msd.hexpat  osb.hexpat
src/: CMakeLists.txt
src/findtool/: CMakeLists.txt  main.cpp
src/fobgui/: CMakeLists.txt  FOBModel.cpp  FOBModel.hpp  MainWindow.cpp  MainWindow.hpp  fobgui.hpp  main.cpp
src/fobtool/: CMakeLists.txt  main.cpp
src/guicommon/: AmpEnvelopeWidget.cpp  AmpEnvelopeWidget.hpp  AudioSystem.cpp  AudioSystem.hpp  CMakeLists.txt  CSV.cpp  CSV.hpp  ChannelSelectDialog.cpp  ChannelSelectDialog.hpp  FilterEnvelopeWidget.cpp  FilterEnvelopeWidget.hpp  FourCCDelegate.cpp  FourCCDelegate.hpp  HorizontalLineItemDropStyle.cpp  HorizontalLineItemDropStyle.hpp  InstDataDialog.cpp  InstDataDialog.hpp  PianoKeyboardWidget.cpp  PianoKeyboardWidget.hpp  TonePlayer.cpp  TonePlayer.hpp  UIntValidator.cpp  UIntValidator.hpp  common.hpp  tone.cpp  tone.hpp  utils.cpp  utils.hpp
src/manatools/: CMakeLists.txt  aica.hpp  common.hpp  endian.hpp  filesystem.hpp  fob.cpp  fob.hpp  fourcc.hpp  io.cpp  io.hpp  midi.cpp  midi.hpp  mlt.cpp  mlt.hpp  mpb.cpp  mpb.hpp  msb.cpp  msb.hpp  msd.cpp  msd.hpp  note.hpp  osb.cpp  osb.hpp  sf2.cpp  sf2.hpp  tone.hpp  tonedecoder.cpp  tonedecoder.hpp  types.hpp  utils.hpp  version.hpp.in  wav.hpp  yadpcm.cpp  yadpcm.hpp
src/mltgui/: CMakeLists.txt  MLTModel.cpp  MLTModel.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  mltgui.hpp  utils.cpp  utils.hpp
src/mlttool/: CMakeLists.txt  main.cpp
src/mpbgui/: AmpEnvelopeWidget.cpp  AmpEnvelopeWidget.hpp  BankPropertiesDialog.cpp  BankPropertiesDialog.hpp  BankPropertiesDialog.ui  CMakeLists.txt  CursorOverride.hpp  FilterEnvelopeWidget.cpp  FilterEnvelopeWidget.hpp  InstDataDialog.cpp  InstDataDialog.hpp  KeyMapView.cpp  KeyMapView.hpp  LayerEditor.cpp  LayerEditor.hpp  LayerEditor.ui  LayersModel.cpp  LayersModel.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ProgramsModel.cpp  ProgramsModel.hpp  README.md  SplitEditor.cpp  SplitEditor.hpp  SplitEditor.ui  SplitMiscEditor.cpp  SplitMiscEditor.hpp  SplitMiscEditor.ui  SplitUnkEditor.cpp  SplitUnkEditor.hpp  SplitUnkEditor.ui  SplitsModel.cpp  SplitsModel.hpp  ToneEditor.cpp  ToneEditor.hpp  ToneEditor.ui  TonePlayer.cpp  TonePlayer.hpp  (+13 more)
src/mpbtool/: CMakeLists.txt  filesystem.hpp  main.cpp  operations.cpp  operations.hpp
src/msbtool/: CMakeLists.txt  main.cpp
src/osbgui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OSBModel.cpp  OSBModel.hpp  ProgramEditor.cpp  ProgramEditor.hpp  ProgramEditor.ui  ProgramMiscEditor.cpp  ProgramMiscEditor.hpp  ProgramMiscEditor.ui  main.cpp  osbgui.hpp
src/osbtool/: CMakeLists.txt  main.cpp
